# dblite-app-jenkins

./: Cargo.toml  Dockerfile  Jenkinsfile  build.rs
sqlite/: InventarioRopa.db
src/: main.rs
src/db/: categoria.rs  usuario.rs
src/models/: categoria.rs  mod.rs  usuario.rs
src/routes/: categorias.rs  mod.rs  usuarios.rs
