[package]
name = "dblite_app"
version = "0.1.0"
authors = ["Ramón Minaya <rminaya9083@gmail.com>"]
edition = "2021"


[dependencies]
rusqlite = "0.25.4"
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.1", features = ["sqlite", "r2d2"] }
dotenvy = "0.15"



